[package]
name = "modernwarfare-cheat-rs"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memlib = { path = "../memlib-rs" }
win_key_codes = "0.1.2"
log = "*"
lazy_static = "*"
gag = "0.1.10"
